added video to lesson 3

--- a/03-Semantic Elements/assets/css/style.css
+++ b/03-Semantic Elements/assets/css/style.css
@@ -4,8 +4,8 @@
 	box-sizing: border-box;
 }
 
-h2 {
-	font-size: 6em;
+h1 {
+	font-size: ;
 	margin-top: 50px;
 	text-align: center;
 	color: crimson;
