--- a/03-Semantic Elements/assets/css/style.css
+++ b/03-Semantic Elements/assets/css/style.css
@@ -4,14 +4,15 @@
 	box-sizing: border-box;
 }
 
-h1 {
-	font-size: ;
-	margin-top: 50px;
-	text-align: center;
-	color: crimson;
-}
-
 .video {
 	margin-left: 33.3333%;
 	margin-right: 33.3333%;
 }
+
+h1 {
+	
+	margin-top: 50px;
+	text-align: center;
+	color: blue;
+}
+
