--- a/03-Semantic Elements/assets/css/style.css
+++ b/03-Semantic Elements/assets/css/style.css
@@ -18,6 +18,10 @@ body {
 	margin: 0 auto;
 }
 
+header{
+	border: 2px solid black;
+}
+
 img {
 	padding: 30px 0px 30px 15px;
 }
@@ -35,3 +39,6 @@ ul {
 	height: 500px;
 	width: 900px;
 }
+
+
+
