--- a/04-forms/assets/css/allforms.css
+++ b/04-forms/assets/css/allforms.css
@@ -4,6 +4,15 @@ body {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.container {
+	width: 90%;
+	max-width:500px;
+	margin: 0 auto;
+}
+
+fieldset {
+	background-color: #eeeeee;
+}
 
 label {
 	margin: 5px 0;	
