--- a/05-figma Denis Novak/assets/css/style.css
+++ b/05-figma Denis Novak/assets/css/style.css
@@ -29,6 +29,7 @@ body {
 
 }
 
+/* ------------Header-------------------- */
 .container {
 	width: 90%;
 	max-width: 970px;
@@ -51,7 +52,7 @@ header {
 
 .maine-menu ul li {
 	display: inline-block;
-	margin: 0px 19px;
+	margin: 0px 19.5px;
 }
 
 
@@ -67,7 +68,7 @@ header {
 /* -----------Novik------------------- */
 
 .novik {
-	margin-top: 12px;
+	margin-top: 11px;
 }
 
 .novik h1 {
@@ -76,7 +77,7 @@ header {
 	font-size: 48px;
 	line-height: 65px;
 	color: #070707;
-	margin-bottom: 44px;
+	margin-bottom: 47px;
 }
 
 img {
@@ -134,17 +135,18 @@ section {
 
 /* -----------------Skills------------------------ */
 .skills .section-title {
-	margin-bottom: 15px;
+	padding-bottom: 15px;
 }
 
 .skills-list {
 	font-size: 0;
+	margin-top: 50px;
 }
 
 .skills-list li {
 
 	display: inline-block;
-	margin-right: 97px;
+	margin-right: 96.5px;
 
 	font-weight: 700;
 	font-size: 14px;
@@ -152,49 +154,36 @@ section {
 	text-align: center;
 	letter-spacing: 0.02em;
 	color: #828282;
-
 }
 
 .skills-list li:last-child {
 	margin-right: 0;
 }
 
-.skills-list {
-	margin-top: 50px;
+.img-skills {
+	padding-bottom: 25px;
 }
 
-.img-skills img {
-	margin-bottom: 25px;
-
-}
-
-.skills-list span {
-	display: block;
-	margin-bottom: 60px;
-}
-
-.skills-list span:last-child {
+.skill-title {
+	width: 90px;
 	height: 38px;
+	margin: 0 auto 60px;
 }
 
-
-.skills-list img:first-child {
-	margin-left: 0;
-}
-
-.skills-list img:last-child {
-	margin-right: 0;
-}
-
-.star-light {
-	opacity: 20%;
+.stars {
+	font-size: 0;
 }
 
 .stars img {
-	width: 26px;
-	height: 26px;
-	margin-left: -3px;
-	margin-right: 9px;
+	padding-right: 8.5px;
+}
+
+.stars img:last-child {
+	padding-right: 0;
+}
+
+.star-light {
+	opacity: 0.1;
 }
 
 /* ----------------Portfolio------------- */
@@ -215,16 +204,18 @@ section {
 	margin-bottom: 40px;
 }
 
-.fashion {}
-
-.reebok {}
+.portfolio .container span {
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+}
 
 /* -----------------Contacts------------------------ */
 
-.contacts span {
-	display: inline-block;
+.contacts p {
+
 	width: 280px;
-	margin-top: 15px;
+	margin: 15px auto 0;
 }
 
 
@@ -236,7 +227,7 @@ section {
 	font-family: 'Open Sans';
 	display: inline-block;
 	height: 44px;
-	line-height: 44px;
+	line-height: 35px;
 	background: #070707;
 	color: #fff;
 	font-weight: 700;
@@ -244,7 +235,7 @@ section {
 	letter-spacing: 0.1em;
 	border: 2px solid #070707;
 	border-radius: 22px;
-	padding: 0 15px;
+	padding: 0 14px;
 	transition: all 0.2s ease;
 }
 
@@ -272,7 +263,7 @@ section {
 
 
 .likemeon {
-	font-weight: 400;
+	/* font-weight: 400; */
 	font-size: 14px;
 	line-height: 19px;
 	text-align: center;
@@ -280,29 +271,3 @@ section {
 }
 
 /* ------------------------------- */
-
-.container {}
-
-.maine-menu {}
-
-.main {}
-
-.novik {}
-
-.novik-image {}
-
-.about {}
-
-.bg-gray {}
-
-.section-title {}
-
-.footer {}
-
-.contacts {}
-
-.button-wrap {}
-
-.btn {}
-
-.likemeon {}
