--- a/05-figma Denis Novak/assets/css/style.css
+++ b/05-figma Denis Novak/assets/css/style.css
@@ -28,6 +28,7 @@ body {
 	line-height: 24.5px;
 
 }
+
 /* ------------Header-------------------- */
 .container {
 	width: 90%;
@@ -134,7 +135,7 @@ section {
 
 /* -----------------Skills------------------------ */
 .skills .section-title {
-	/* padding-bottom: 15px; */
+	padding-bottom: 15px;
 }
 
 .skills-list {
@@ -162,23 +163,25 @@ section {
 .img-skills {
 	padding-bottom: 25px;
 }
+
 .skill-title {
 	width: 95px;
 	height: 38px;
-	margin:0 auto 60px;
+	margin: 0 auto 60px;
 }
 
-.stars{
-		font-size: 0;
+.stars {
+	font-size: 0;
 }
 
 .stars img {
 	margin-right: 8.5px;
 }
 
-.stars img:last-child{
+.stars img:last-child {
 	margin-right: 0;
 }
+
 .star-light {
 	opacity: 0.1;
 }
@@ -199,13 +202,13 @@ section {
 
 .portfolio img {
 	margin-bottom: 40px;
-	}
+}
 
-.portfolio .container span {
-	display: block;
+.portfolio .fasion-link {
 	width: 200px;
 	margin: 0 auto;
 }
+
 /* -----------------Contacts------------------------ */
 
 .contacts p {
@@ -267,4 +270,3 @@ section {
 }
 
 /* ------------------------------- */
-
