--- a/CSS Shopping List/assets/css/style.css
+++ b/CSS Shopping List/assets/css/style.css
@@ -174,7 +174,7 @@ footer {
 }
 
 footer span {
-	vertical-align: middle;
+
 	color: #FF8984;
-	padding: 12px 223px 12px 204px;
+	margin: 12px auto;
 }
