--- a/Productly/assets/css/style.css
+++ b/Productly/assets/css/style.css
@@ -13,6 +13,10 @@ a {
 	color: #2F281E;
 }
 
+img {
+	vertical-align: top;
+}
+
 html,
 body {
 	width: 100%;
@@ -26,6 +30,10 @@ body {
 	color: #544837;
 }
 
+* {
+	transition: all .1s ease-in;
+}
+
 /* -----------Header------------------ */
 
 .container {
@@ -34,133 +42,249 @@ body {
 	margin: 0 auto;
 }
 
-#header {}
-
-.header {
-	height: 80px;
+.flex {
 	display: flex;
-}
-
-.header-logo {
-	padding: 24px 0;
-}
-
-.maine-menu ul {
-	padding: 0 199px;
-}
-
-.maine-menu li {
-	padding: 26px 16px 26px 0;
-	display: inline-block;
 	justify-content: space-between;
+	align-items: center;
+}
+
+.header .container {
+	height: 80px;
+	vertical-align: middle;
+}
+
+.menu__list {
+	display: flex;
+
+}
+
+.menu__link {
 	font-weight: 400;
-	line-height: 28px;
-
-}
-
-.maine-menu li:last-child {
-	padding-right: 0;
-}
-
-.maine-menu li a:hover {
-color: #FF9900;
-}
-
-.header-button {
-	padding-top: 17px ;
-
-}
-
-
-.wite-button {
-	font-weight: 600;
-	line-height: 19.5px;
-	color: #2F281E;
 	font-size: 16px;
-	background-color: transparent;
+	line-height: 28px;
+	color: #2F281E;
+}
+
+.header__menu .menu__item {
+	padding-right: 20px;
+}
+
+.header__menu .menu__item:last-child {
+	padding-right: 0px;
+}
+
+
+.menu__link:hover {
+	color: #FF9900;
+}
+
+.btn-white {
+	width: 110px;
 	height: 46px;
-	padding: 0px 24.5px;
-	font-family: 'Montserrat';
+	background-color: #fff;
 	border: 1px solid #BCD0E5;
 	border-radius: 4px;
-	transition: all 0.2s ease;
-}
-
-.wite-button:hover {
-	color: #ffffff;
-	background-color: #dddddd;
-}
-
-.wite-button:active {
-	color: #fefefe;
-	background-color: #bbbbbb;
-}
-
-.button-orang {
 	font-family: 'Montserrat';
-	/* height: 46px; */
-	display: inline-block;
-	padding: 13px 23px;
-	background: #FF9900;
-	border: none;
-	border-radius: 4px;
-	font-weight: 500;
+	font-weight: 600;
 	font-size: 16px;
 	line-height: 20px;
-	color: #FFFFFF;
-	transition: all 0.2s ease;
+	color: #2F281E;
+}
+
+.btn-white:hover {
+	background-color:#ededed;
 	
 }
 
-.button-orang:hover {
-	color: #6607ffea;
-	background-color: #ffbb00;
+.btn-white:active {
+	background-color:#c7c7c7;
+	
 }
 
-.button-orang:active {
-	background-color: #FF9900;
+.btn-orang {
+	width: 110px;
+	height: 46px;
+	background: #FF9900;
+	border-radius: 4px;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 20px;
+	color: #FFFFFF;
+	border: none;
 }
 
-header .button-orang {
-	margin-left: 27px;
-	}
-
-/* ---------------------Main---------------------------- */
-.info  {
-	padding-top: 69px;
+.btn-orang:hover {
+	color: midnightblue;
+}
+.btn-orang:active {
+	background-color:#ea8c00;
 }
 
-.info {
-	display:flex ;
+.button {
+	display: flex;
+	justify-content: space-between;
 }
 
-.info-text {
-	margin-top: 97px;
-	width: 500px;
+.header__button {
+	width: 252px;
 }
 
-.info-text h1 {
+.header {
+	margin-bottom: 70px;
+}
+
+/* -----------Main------------ */
+
+.item-section__title {
 	font-weight: 700;
 	font-size: 44px;
 	line-height: 54px;
 	color: #2F281E;
-	padding-bottom: 31px;
 }
 
-.info-text p {
+.item-section__text {
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 28px;
-	padding-bottom: 29px;
+	color: #544837;
 }
 
-main .button-orang {
+
+.first-section .btn-orang {
+	width: 180px;
+	height: 50px;
+}
+
+
+
+.first-section .item-section__content {
+	align-self: start;
+}
+
+
+.first-section .item-section__title {
+	margin: 95px 0 33px;
+}
+
+.first-section .item-section__text {
+	margin-bottom: 26px;
+}
+
+
+/* ------------Skills------------ */
+
+.item-skills__title {
+	margin: 0 auto;
+	width: 500px;
+	text-align: center;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 44px;
+	text-align: center;
+	color: #2F281E;
+}
+
+.list-item__title {
 	font-weight: 600;
-	padding: 15px 44px;
-	
-font-family: 'Poppins';
+	font-size: 22px;
+	line-height: 27px;
+	color: #2F281E;
 }
 
-.info-image {
-	padding-left: 56px;
+.skills .list-item {
+	width: 270px;
 }
+
+.skills .item-skills__title {
+	padding: 97px 0 50px;
+}
+
+.skills .list-item__icon {
+	margin-bottom: 30px;
+}
+
+.skills .list-item__title {
+	margin-bottom: 17px;
+}
+
+.skills__button {
+	/* text-align: center; */
+	margin: 69px 500px 74px 515px;
+
+}
+
+.skills__button .btn-orang {
+	width: 180px;
+	height: 50px;
+}
+
+
+/* --------------Footer---------------- */
+
+.footer {
+	height: 209px;
+}
+
+.footer .flex{
+	align-items:flex-start;
+}
+
+
+
+.footer-title {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 30px;
+	color: #2F281E;
+
+}
+
+.footer__form .footer-title {
+	width: 280px;
+}
+
+.footer__form input {
+	width: 340px;
+	height: 50px;
+	
+	border: 1px solid #BCD0E5;
+	border-radius: 4px;
+	}
+
+::placeholder{
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
+	color: #BCD0E5;
+	padding-left: 10px;
+}
+
+.footer__form .btn-orang {
+	
+	display: block;
+}
+
+
+.footer .btn-orang {
+	width: 180px;
+	height: 50px;
+}
+
+.footer__button {
+	padding-top: 25px;
+}
+
+.footer-title {
+	margin-bottom: 25px;
+}
+
+.footer__menu li {
+	margin-bottom: 15px;
+}
+
+.footer__menu li:last-child {
+	margin-bottom: 0px;
+}
+
