--- a/Productly/assets/css/style.css
+++ b/Productly/assets/css/style.css
@@ -223,6 +223,8 @@ body {
 
 /* --------------Footer---------------- */
 
+/* Не знайшов шрифт для заголовка Footer font-family: 'Gotham'; */
+
 .footer {
 	height: 209px;
 }
@@ -253,17 +255,13 @@ body {
 	border-radius: 4px;
 	}
 
+
 ::placeholder{
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 20px;
 	color: #BCD0E5;
 	padding-left: 10px;
-}
-
-.footer__form .btn-orang {
-	
-	display: block;
 }
 
 
