--- a/Productly/assets/css/style.css
+++ b/Productly/assets/css/style.css
@@ -28,6 +28,7 @@ body {
 	font-weight: 500;
 	line-height: 26px;
 	color: #544837;
+
 }
 
 * {
@@ -37,10 +38,10 @@ body {
 /* -----------Header------------------ */
 
 .page-wrapper {
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 100%;
 }
 
 
@@ -104,13 +105,11 @@ min-height: 100%;
 }
 
 .btn-white:hover {
-	background-color:#ededed;
-	
+	background-color: #ededed;
 }
 
 .btn-white:active {
-	background-color:#c7c7c7;
-	
+	background-color: #c7c7c7;
 }
 
 .btn-orang {
@@ -123,6 +122,7 @@ min-height: 100%;
 	font-weight: 600;
 	font-size: 16px;
 	line-height: 20px;
+
 	color: #FFFFFF;
 	border: none;
 }
@@ -130,8 +130,9 @@ min-height: 100%;
 .btn-orang:hover {
 	color: midnightblue;
 }
+
 .btn-orang:active {
-	background-color:#ea8c00;
+	background-color: #ea8c00;
 }
 
 .button {
@@ -228,27 +229,34 @@ min-height: 100%;
 }
 
 .skills__button .btn-orang {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 24px;
 	width: 180px;
 	height: 50px;
+	margin-bottom: 74px;
 }
 
-/* .skills {
-	background: url(../images/bg-skills.png) center bottom/cover no-repeat;
-} */
+.skills {
+	background: url(../images/bg-skills.png) center bottom no-repeat;
+
+}
 
 /* --------------Footer---------------- */
-
-/* Не знайшов шрифт для заголовка Footer font-family: 'Gotham'; */
 
 .footer {
 	height: 209px;
 }
 
-.footer .flex{
-	align-items:flex-start;
+.footer .flex {
+	justify-content: flex-start;
+	align-items: flex-start;
 }
 
-
+.footer__logo {
+	margin-right: 130px;
+}
 
 .footer-title {
 	font-weight: 700;
@@ -260,18 +268,20 @@ min-height: 100%;
 
 .footer__form .footer-title {
 	width: 280px;
+	margin-bottom: 23px;
 }
 
 .footer__form input {
 	width: 340px;
 	height: 50px;
-	
+
 	border: 1px solid #BCD0E5;
 	border-radius: 4px;
-	}
+}
 
 
-::placeholder{
+::placeholder {
+	font-family: 'Montserrat';
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 20px;
@@ -281,6 +291,10 @@ min-height: 100%;
 
 
 .footer .btn-orang {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 24px;
 	width: 180px;
 	height: 50px;
 }
@@ -290,14 +304,27 @@ min-height: 100%;
 }
 
 .footer-title {
-	margin-bottom: 25px;
+	font-family: 'Gotham', sans-serif;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 30px;
+
+	margin-bottom: 30px;
 }
 
 .footer__menu li {
-	margin-bottom: 15px;
+	margin-bottom: 13px;
 }
 
 .footer__menu li:last-child {
 	margin-bottom: 0px;
 }
 
+footer .container {
+	padding-bottom: 70px;
+}
+
+.fb-nav {
+	margin-right: 130px;
+	width: 135px;
+}
