--- a/Productly/assets/css/style.css
+++ b/Productly/assets/css/style.css
@@ -328,3 +328,11 @@ footer .container {
 	margin-right: 130px;
 	width: 135px;
 }
+
+input {
+	font-size: 20px;
+}
+
+input:focus {
+	outline: thin dotted;
+}
