--- a/CSS-Grid-Layout Photo-gallery/assets/css/style.css
+++ b/CSS-Grid-Layout Photo-gallery/assets/css/style.css
@@ -159,8 +159,10 @@ h2 {
 
 .gallery__image:hover {
 	opacity: 1;
+	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
 }
 
 .portrait {
 	padding-bottom: 120px;
+
 }
