--- a/CSS-Grid-Layout Photo-gallery/assets/css/style.css
+++ b/CSS-Grid-Layout Photo-gallery/assets/css/style.css
@@ -21,6 +21,9 @@ body {
 
 img {
 	vertical-align: top;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 * {
@@ -31,7 +34,7 @@ img {
 	width: 90%;
 	max-width: 1170px;
 	margin: 0 auto;
-	/* border: 1px solid blue; */
+
 }
 
 /* ------------------------------------------ */
@@ -62,12 +65,6 @@ h2 {
 	overflow: hidden;
 	border-radius: 20px;
 }
-
-/* .item__image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-} */
 
 .item11 {
 	grid-area: 1/1/2/2;
@@ -123,32 +120,38 @@ h2 {
 	grid-template-rows: repeat(5, 370px);
 }
 
-
-
 .item32 {
-	grid-area:1/2/3/3;
+	grid-area: 1/2/3/3;
 }
+
 .item33 {
 	grid-area: 1/3/2/4;
 }
+
 .item34 {
 	grid-area: 2/1/3/2;
 }
+
 .item35 {
-	grid-area:2/3/4/4 ;
+	grid-area: 2/3/4/4;
 }
+
 .item36 {
 	grid-area: 3/1/5/2;
 }
+
 .item37 {
 	grid-area: 3/2/4/3;
 }
+
 .item38 {
 	grid-area: 4/2/5/4;
 }
+
 .item39 {
 	grid-area: 5/1/6/3;
 }
+
 .item310 {
 	grid-area: 5/3/6/4;
 }
@@ -160,9 +163,43 @@ h2 {
 .gallery__image:hover {
 	opacity: 1;
 	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
+
 }
 
 .portrait {
 	padding-bottom: 120px;
 
+}
+
+
+/* ----------------------------- */
+.gallery__image {
+	position: relative;
+}
+
+.heart {
+	opacity: 0.6;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	z-index: -1;
+}
+
+.download {
+	opacity: 0.6;
+	position: absolute;
+	top: 20px;
+	right: 20px;
+
+	z-index: -1;
+}
+
+.gallery__image:hover .heart,
+.gallery__image:hover .download {
+	z-index: 1;
+}
+
+.heart:hover,
+.download:hover {
+	opacity: 1;
 }
