--- a/Web Fonts/assets/css/style.css
+++ b/Web Fonts/assets/css/style.css
@@ -60,12 +60,15 @@ body {
 	font-family: 'Farro';
 	font-style: normal;
 	font-weight: 300;
-	font-size: 30px;
+	/* font-size: 30px; */
 	line-height: 30px;
-	letter-spacing: 0.04em;
+	letter-spacing: 0.0350em;
 	text-transform: none;
 
 }
+
+
+
 
 .ptsans-italic {
 	font-family: 'PT Sans';
@@ -89,7 +92,17 @@ body {
 }
 
 .header-nav {
-	padding-right: 601px;
+	padding-right: 609px;
+}
+
+.header-nav li:nth-child(2) {
+	position: relative;
+	left: 10px;
+}
+
+.slash {
+	position: relative;
+	left: 5px;
 }
 
 header {
@@ -97,8 +110,7 @@ header {
 }
 
 .language {
-	/* align-self: center; */
-	padding-top: 16px;
+	padding-top: 17px;
 	padding-right: 52px;
 	padding-left: 3px;
 }
@@ -127,28 +139,78 @@ header li {
 	vertical-align: middle;
 }
 
+.section-title sup {
+	position: relative;
+	display: inline-block;
+	top: -5px;
+	left: 9px;
+	vertical-align: text-top;
+	font-size: 18px;
+
+}
+
+.chapter2 sup {
+	position: relative;
+	display: inline-block;
+	top: -7px;
+	left: 0;
+}
+
+.chapter3 sup {
+	position: relative;
+	display: inline-block;
+	left: -1px;
+	bottom: 1px;
+}
+
+.section:first-child {
+	margin-top: 73px;
+}
+
 .section {
-	margin-top: 70px;
+	margin-top: 60px;
 }
 
 .section-title {
-	margin-bottom: 40px;
+	margin-bottom: 38px;
 }
 
 
 p {
-	padding-bottom: 40px;
+	padding-bottom: 30px;
 }
 
 p:last-child {
 	padding-bottom: 0;
 }
 
-.underline {
-	text-decoration-line: underline;
+.textbg-grey {
+	display: inline-block;
+	background: #c8c8c8;
+	/* margin-bottom: 10px; */
 }
 
-.textbg-grey {
-	height: 50px;
-	background: #c8c8c8;
+.chapter3 p:nth-child(5) {
+	margin-bottom: 10px;
+
+}
+
+.chapter3 p:nth-child(6) {
+	margin-bottom: 7px;
+
+}
+
+.chapter4 sup {
+	position: relative;
+	display: inline-block;
+	left: -2px;
+	top: -7px;
+}
+
+.scale {
+	display: inline-block;
+	transform: scale(-1, 1);
+	font-size: 24px;
+	position: relative;
+	top: -5px;
 }
