--- a/Web Fonts/assets/css/fonts.css
+++ b/Web Fonts/assets/css/fonts.css
@@ -53,13 +53,9 @@
   font-family: 'Staatliches';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/staatliches/staatliches-v11-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/staatliches/staatliches-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/staatliches/staatliches-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/staatliches/staatliches-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/staatliches/staatliches-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/staatliches/staatliches-v11-latin-regular.svg#Staatliches') format('svg'); /* Legacy iOS */
+       url('../fonts/staatliches/staatliches-v11-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/staatliches/staatliches-v11-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* ------------------ */
 
