--- a/Our team/assets/css/style.css
+++ b/Our team/assets/css/style.css
@@ -39,7 +39,7 @@ body {
   line-height: 66px;
   text-transform: uppercase;
   color: #FC0;
-  padding-top: 14px;
+  padding-top: 15px;
 }
 .header__subtitle {
   padding-top: 121px;
@@ -52,7 +52,7 @@ body {
 }
 .header__img img {
   position: relative;
-  top: 33px;
+  top: 32px;
   left: 0px;
 }
 .header__img:before {
@@ -62,7 +62,7 @@ body {
   border-top: 1px solid #FC0;
   position: relative;
   left: -1px;
-  bottom: -23px;
+  bottom: -22px;
 }
 .header__img:after {
   content: "";
@@ -71,7 +71,7 @@ body {
   border-top: 1px solid #FC0;
   position: relative;
   left: 1px;
-  bottom: -23px;
+  bottom: -22px;
 }
 
 .main__wrapper {
@@ -85,9 +85,7 @@ body {
   border-right: 1px solid #FC0;
 }
 .main__photo img {
-  display: inline-block;
-  width: 400px;
-  padding-top: 80px;
+  padding-top: 81px;
   margin-right: 15px;
   padding-bottom: 80px;
 }
@@ -102,8 +100,8 @@ body {
   height: 100px;
   border-top: 1px solid #FC0;
   border-left: 1px solid #FC0;
-  top: 66px;
-  left: 70px;
+  top: 65px;
+  left: 69px;
 }
 .wrap-img .top:after {
   content: "";
@@ -122,8 +120,8 @@ body {
   height: 100px;
   border-bottom: 1px solid #FC0;
   border-left: 1px solid #FC0;
-  bottom: 69px;
-  left: 70px;
+  bottom: 68px;
+  left: 69px;
 }
 .wrap-img .bottom:after {
   content: "";
@@ -132,7 +130,7 @@ body {
   height: 100px;
   border-bottom: 1px solid #FC0;
   border-right: 1px solid #FC0;
-  bottom: 68px;
+  bottom: 67px;
   right: 85px;
 }
 
@@ -156,8 +154,8 @@ body {
   text-align: center;
   text-transform: capitalize;
   color: #666666;
-  padding-top: 25px;
-  padding-bottom: 23px;
+  padding-top: 26px;
+  padding-bottom: 22px;
 }
 .main__content-icon li {
   display: inline-block;
@@ -170,25 +168,80 @@ body {
   line-height: 24px;
   text-align: center;
   color: #333333;
-  padding-top: 45px;
-  padding-bottom: 29px;
+  padding-top: 49px;
+  padding-bottom: 30px;
   width: 430px;
   margin: 0 auto;
 }
-.main__content-button {
+.main__content-button a {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 14px;
+  letter-spacing: 0.5px;
   text-transform: uppercase;
   color: #666666;
-  padding: 4px 12px;
+  padding: 2px 10px;
   border: 1px solid #FC0;
   background-color: #fff;
-  width: 118px;
   transition: all 0.3s ease;
   margin: 0 auto;
+}
+.main__content-button a:hover {
+  background-color: #ffdb4a;
+  color: #404040;
+}
+.main__content-button a:active {
+  background-color: #e0b300;
+  color: #060606;
+}
+
+.icon {
+  width: 135px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.icon__media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  font-size: 12px;
+  color: #ccc;
+}
+.icon-tw {
+  font-size: 14px;
+}
+.icon-google {
+  transform: scale(1.5) translate(-1px, 1.5px);
+}
+.icon-in {
+  font-size: 13px;
+}
+
+.fb-hover a:hover {
+  border: 2px solid #3b5998;
+  color: #3b5998;
+}
+
+.tw-hover a:hover {
+  border: 2px solid #58bbf9;
+  color: #58bbf9;
+}
+
+.google-hover a:hover {
+  border: 2px solid #DB4437;
+  color: #DB4437;
+}
+
+.in-hover a:hover {
+  border: 2px solid #0e76a8;
+  color: #0e76a8;
 }
 
 .main__content-title::after {
@@ -197,7 +250,7 @@ body {
   width: 100px;
   border-bottom: 1px solid #FC0;
   position: relative;
-  top: 3px;
+  top: 4px;
 }
 
 .main__content-dashed ul {
@@ -219,8 +272,4 @@ body {
   background: #FC0;
   width: 20px;
   height: 4px;
-}
-
-.main__content-button:hover {
-  background-color: #FC0;
 }
