--- a/Our team/assets/css/style.scss
+++ b/Our team/assets/css/style.scss
@@ -31,9 +31,6 @@ body {
 	text-align: center;
 }
 
-
-
-
 .container {
 	// border: 1px solid rgba(47, 35, 35, .3);
 	width: 90%;
@@ -53,11 +50,11 @@ body {
 		line-height: 66px;
 		text-transform: uppercase;
 		color: $title-color;
-		padding-top: 14px;
+		padding-top: 15px;
 	}
 
 	&__subtitle {
-		padding-top: 121px;
+		padding-top:121px;
 		font-weight: 500;
 		font-size: 18px;
 		line-height: 24px;
@@ -69,7 +66,7 @@ body {
 
 	&__img img {
 		position: relative;
-		top: 33px;
+		top: 32px;
 		left: 0px;
 	}
 
@@ -80,7 +77,7 @@ body {
 		border-top: $border-gold;
 		position: relative;
 		left: -1px;
-    bottom: -23px;
+    bottom: -22px;
 	}
 
 	&__img:after {
@@ -90,7 +87,7 @@ body {
 		border-top: $border-gold;
 		position: relative;
 		left: 1px;
-    bottom: -23px;
+    bottom: -22px;
 	}
 
 }
@@ -110,11 +107,8 @@ body {
 	border-right: 1px solid $title-color;
 
 		img {
-			width: 100%;
-			height: auto;
-			display: inline-block;
-			// width: 400px;
-			padding-top: 80px;
+		
+			padding-top: 81px;
 			margin-right: 15px;
 			padding-bottom: 80px;
 			}
@@ -130,8 +124,8 @@ body {
 			height: 100px;
 			border-top:  $border-gold;
 			border-left: $border-gold;
-			top: 66px;
-			left: 70px;
+			top: 65px;
+			left: 69px;
 		}
 
 		.top:after {
@@ -152,8 +146,8 @@ body {
 			height: 100px;
 			border-bottom:  $border-gold;
 			border-left: $border-gold;
-			bottom: 69px;
-			left: 70px;
+			bottom: 68px;
+			left: 69px;
 		}
 
 		.bottom:after {
@@ -164,7 +158,7 @@ body {
 			height: 100px;
 			border-bottom:  $border-gold;
 			border-right: $border-gold;
-			bottom: 68px;
+			bottom: 67px;
 			right: 85px;
 		}
 }
@@ -173,7 +167,7 @@ body {
 		width: 50%;
 		padding-top: 75px;
 		padding-left: 14px;
-
+	
 			&-title {
 				font-family: 'Roboto';
 				font-weight: 900;
@@ -192,8 +186,8 @@ body {
 				text-align: center;
 				text-transform: capitalize;
 				color: #666666;
-				padding-top: 25px;
-				padding-bottom: 23px;
+				padding-top: 26px;
+				padding-bottom: 22px;
 			}
 
 			&-icon li{
@@ -210,30 +204,100 @@ body {
 				text-align: center;
 				color: #333333;
 
-				padding-top: 45px;
-				padding-bottom: 29px;
+				padding-top: 49px;
+				padding-bottom: 30px;
 				width: 430px;
 				margin: 0 auto;
 				}
 
-			&-button {
+				
+			&-button a{
+				
 				font-family: 'Open Sans';
 				font-style: normal;
 				font-weight: 700;
 				font-size: 14px;
 				line-height: 14px;
+				letter-spacing: 0.5px;
 				text-transform: uppercase;
 				color: #666666;
-				padding: 4px 12px;
+				padding: 2px 10px;
 				border: $border-gold;
 				background-color: #fff;
-				min-width: 118px;
 				transition: all .3s ease;
 				margin: 0 auto;
 			}
 
+			&-button a:hover {
+				background-color:#ffdb4a;
+				color: #404040;
+			}
+
+			&-button a:active {
+				background-color:#e0b300;
+				color: #060606;
+			}
 	}
 	
+.icon {
+	width: 135px;
+	display: flex;
+	justify-content: space-between;
+	margin: 0 auto;
+	&__media {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 30px;
+		height: 30px;
+		border-radius: 50%;
+		border: 2px solid #ccc;
+		font-size: 12px;
+		color: #ccc;
+
+	}
+	
+	&-tw {
+		font-size: 14px;
+	}
+
+	&-google {
+		transform: scale(1.5) translate(-1px, 1.5px);
+	}
+
+	&-in {
+		font-size: 13px;
+	}
+}
+
+
+
+
+
+
+	
+	.fb-hover a:hover {
+		border: 2px solid #3b5998;
+		color:  #3b5998;
+		
+	}
+
+
+	.tw-hover a:hover {
+		border: 2px solid #58bbf9;
+		color: #58bbf9;
+	}
+
+	.google-hover a:hover {
+		border: 2px solid #DB4437;
+		color: #DB4437;
+	}
+
+	.in-hover a:hover {
+		border: 2px solid #0e76a8;
+		color: #0e76a8;
+	}
+
 
 .main__content-title::after {
 	content: '';
@@ -242,7 +306,7 @@ body {
 	border-bottom: $border-gold;
 	position: relative;
 
-	top: 3px;
+	top: 4px;
 	}
 
 
@@ -268,8 +332,9 @@ body {
 }
 
 
-.main__content-button:hover {
-	background-color:$title-color;
-}
+// .main__content-button a:hover {
+// 	background-color:$title-color;
+// 	color: #fff;
+// }
 
 
