--- a/Documentation/assets/css/style.scss
+++ b/Documentation/assets/css/style.scss
@@ -24,6 +24,8 @@ body {
 }
 
 body {
+	background: url("../images/bg-picture.png")right 0 top 153px  no-repeat fixed;
+	
 	font-family: 'PT Sans';
 	font-style: normal;
 	font-weight: 400;
@@ -161,7 +163,7 @@ main {
 }
 
 main {
-	background: url("../images/bg-picture.png")1044px 153px  no-repeat fixed;
+	
 }
 
 aside {
