Added Who’s using for Documentation

--- a/Our team/assets/css/style.scss
+++ b/Our team/assets/css/style.scss
@@ -20,6 +20,12 @@ a {
 	text-decoration: none;
 }
 
+// img {
+// 	height: 100%;
+// 	width: 100%;
+// 	vertical-align: top;
+// 	object-fit: cover;
+// }
 
 html, body {
 	width: 100%;
