--- a/Documentation/assets/css/using.css
+++ b/Documentation/assets/css/using.css
@@ -90,3 +90,200 @@
   src: local(""), url("../fonts/Roboto/roboto-v30-latin-700.woff2") format("woff2"), url("../fonts/Roboto/roboto-v30-latin-700.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  color: #000;
+}
+
+img {
+  vertical-align: top;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.tourney {
+  font-family: "Tourney";
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 18px;
+  letter-spacing: 0.04em;
+  color: #000;
+}
+
+.staatliches {
+  font-family: "Staatliches";
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+}
+
+.roboto {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: 0.04em;
+  color: #000000;
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+#header {
+  height: 80px;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.5);
+  left: 0;
+  top: 0;
+  z-index: 900;
+  width: 100%;
+  backdrop-filter: blur(3px);
+}
+
+header .slash {
+  position: relative;
+  left: 7px;
+}
+header .language {
+  margin-top: -5px;
+  padding-right: 54px;
+}
+header .li-using {
+  padding-left: 3px;
+}
+header li {
+  font-family: "Staatliches";
+  text-transform: uppercase;
+  display: inline-block;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+}
+header .flex {
+  padding: 16px 0 15px;
+  align-items: center;
+}
+
+.header-wrap__logo img {
+  vertical-align: middle;
+}
+
+.header-nav {
+  padding-right: 609px;
+}
+.header-nav a {
+  text-decoration: none;
+}
+.header-nav li:nth-child(2) {
+  position: relative;
+  left: 10px;
+}
+
+.section {
+  padding-top: 153px;
+  padding-left: 10px;
+}
+.section-title {
+  padding-bottom: 40px;
+}
+
+.grid {
+  display: grid;
+  padding: 20px 15px;
+  grid: repeat(2, 1fr)/repeat(4, 1fr);
+  gap: 30px;
+}
+
+img {
+  border-radius: 8px;
+}
+
+.flip__wrap {
+  width: 270px;
+  height: 180px;
+  position: relative;
+  perspective: 1000px;
+  overflow: hidden;
+}
+.flip__wrap:hover .flip {
+  transform: rotateX(180deg);
+}
+.flip__wrap .flip {
+  width: 100%;
+  height: 100%;
+  transition: all 0.8s ease;
+  transform-style: preserve-3d;
+}
+.flip__wrap .flip__front {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  backface-visibility: hidden;
+}
+.flip__wrap .flip__back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  filter: invert(100%);
+  left: 0;
+  top: 0;
+  transform: rotateX(180deg);
+  backface-visibility: hidden;
+}
+
+.wrap__logo {
+  font-size: 0;
+}
+.wrap__logo::after, .wrap__logo::before {
+  content: "";
+  width: 100%;
+  display: inline-block;
+  border-top: 1px solid #BFBFBF;
+}
+.wrap__logo::after {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.section-title::before {
+  content: "";
+  display: inline-block;
+  width: 100px;
+  height: 8px;
+  background-color: #000;
+  position: relative;
+  bottom: 8px;
+  left: -9px;
+}
+
+.flip__wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
