--- a/Who's using/assets/css/style.scss
+++ b/Who's using/assets/css/style.scss
@@ -1,6 +1,5 @@
 @import 'fonts';
 
-
 * {
 	padding: 0;
 	margin: 0;
@@ -162,6 +161,9 @@ main {
 	padding-top: 180px;
 }
 
+main {
+	
+}
 
 aside {
 	position: sticky;
@@ -299,4 +301,3 @@ left:100px;
 }
 
 }
-
