--- a/Documentation/assets/css/using.scss
+++ b/Documentation/assets/css/using.scss
@@ -167,7 +167,7 @@ img {
 	height: 180px;
 	position: relative;
 	perspective: 1000px;
-	overflow: hidden;
+	
 	
 	&:hover .flip {
 		transform: rotateX(180deg);
@@ -176,7 +176,7 @@ img {
 	.flip {
 		width: 100%;
 		height: 100%;
-		transition: all .8s ease;
+		transition: all 2.8s ease;
 		transform-style:preserve-3d ;
 	}
 
