Added changes for documentation

--- a/Documentation/assets/css/using.scss
+++ b/Documentation/assets/css/using.scss
@@ -176,7 +176,7 @@ img {
 	.flip {
 		width: 100%;
 		height: 100%;
-		transition: all 2.8s ease;
+		transition: all .8s ease;
 		transform-style:preserve-3d ;
 	}
 
