--- a/Form Style/assets/css/style.css
+++ b/Form Style/assets/css/style.css
@@ -133,7 +133,6 @@ select {
   font-size: 15px;
   line-height: 22px;
   letter-spacing: -0.2px;
-  color: #545454;
   border: 1px solid #969696;
   border-radius: 6px;
   font-size: 15px;
@@ -192,6 +191,10 @@ select {
   background: #fff;
 }
 
+.jq-selectbox.focused .jq-selectbox__select {
+  border: 1px solid #007BFF;
+}
+
 .jq-selectbox__select {
   width: 245px;
   height: 38px;
@@ -233,8 +236,8 @@ select {
   box-sizing: border-box;
   width: 100%;
   padding: 0;
-  border: 1px solid #CCC;
-  border-radius: 4px;
+  border: 1px solid #969696;
+  border-radius: 6px;
   background: #FFF;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
   font-family: "Inter";
@@ -265,7 +268,7 @@ select {
   display: inline-block;
   position: relative;
   bottom: -32px;
-  left: 170px;
+  left: 170.5px;
   width: 0;
   height: 0;
   z-index: 25;
@@ -399,7 +402,6 @@ select {
   font-size: 15px;
   line-height: 22px;
   letter-spacing: -0.2px;
-  color: #545454;
   color: #969696;
   padding: 4px 10px;
 }
@@ -477,7 +479,6 @@ select {
   font-size: 15px;
   line-height: 22px;
   letter-spacing: -0.2px;
-  color: #545454;
   color: #969696;
 }
 .jq-number__spin.minus, .jq-number__spin.plus {
