--- a/Form Style/assets/css/style.scss
+++ b/Form Style/assets/css/style.scss
@@ -9,6 +9,7 @@
 	color: #545454;
 }
 
+
 $theme-color: #969696;
 $focus-color: #007BFF;
 
@@ -32,8 +33,12 @@ html, body {
 }
 
 body {
-	@include font-roboto400;
-
+	font-family: 'Roboto';
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 22px;
+	letter-spacing: -0.2px;
+	color: #545454;
 	background-color: #E5E5E5;
 }
 
@@ -127,7 +132,11 @@ select {
 	width: 100%;
 	height: 38px;
 	border: 1px solid #999;
-	@include font-roboto400 ;
+	font-family: 'Roboto';
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 22px;
+	letter-spacing: -0.2px;
 	border: 1px solid $theme-color;
 	border-radius: 6px;
 	font-size: 15px;
@@ -185,6 +194,11 @@ select {
 	background: #fff;
 }
 
+.jq-selectbox.focused .jq-selectbox__select {
+	border: 1px solid $focus-color;
+}
+
+
 .jq-selectbox__select {
 	width: 245px;
 	height: 38px;
@@ -208,7 +222,6 @@ select {
 	&-text {
 		width: 100%!important;
 	}
-
 }
 
 
@@ -234,8 +247,8 @@ select {
 	width: 100%;
 
 	padding: 0;
-	border: 1px solid #CCC;
-	border-radius: 4px;
+	border: 1px solid $theme-color;
+	border-radius: 6px;
 	background: #FFF;
 	box-shadow: 0 2px 10px rgb(0 0 0 / 5%);
 	
@@ -269,7 +282,7 @@ select {
 	display: inline-block;
 	position: relative;
 	bottom: -32px;
-	left: 170px;
+	left: 170.5px;
 	
 	width: 0;
 	height: 0;
@@ -418,7 +431,11 @@ select {
 
 .jq-file.changed {
 		.jq-file__name {
-			@include font-roboto400 ;
+			font-family: 'Roboto';
+			font-weight: 400;
+			font-size: 15px;
+			line-height: 22px;
+			letter-spacing: -0.2px;
 			color: $theme-color;
 			padding: 4px  10px;
 	}
@@ -496,7 +513,11 @@ select {
 				border: none;
 				outline: none;
 				background: none;
-				@include font-roboto400 ;
+				font-family: 'Roboto';
+				font-weight: 400;
+				font-size: 15px;
+				line-height: 22px;
+				letter-spacing: -0.2px;
 				color: $theme-color;
 
 			}
