--- a/Form Style/assets/css/style.scss
+++ b/Form Style/assets/css/style.scss
@@ -194,6 +194,8 @@ select {
 	background: #fff;
 }
 
+
+
 .jq-selectbox.focused .jq-selectbox__select {
 	border: 1px solid $focus-color;
 }
@@ -504,7 +506,7 @@ select {
 			height: 100%;
 			border: 1px solid $theme-color;
 			border-bottom-color: $theme-color;
-			border-radius: 4px;
+			border-radius: 6px;
 			box-shadow: none;
 			input {
 				box-sizing: border-box;
@@ -518,7 +520,7 @@ select {
 				font-size: 15px;
 				line-height: 22px;
 				letter-spacing: -0.2px;
-				color: $theme-color;
+				// color: $theme-color;
 
 			}
 	}
