--- a/Form Style/assets/css/style.scss
+++ b/Form Style/assets/css/style.scss
@@ -1,13 +1,5 @@
 @import 'fonts';
-
-@mixin font-roboto400 {
-	font-family: 'Roboto';
-	font-weight: 400;
-	font-size: 15px;
-	line-height: 22px;
-	letter-spacing: -0.2px;
-	color: #545454;
-}
+@import 'response';
 
 
 $theme-color: #969696;
@@ -60,26 +52,49 @@ body {
 	gap: 12px;
 }
 
+.btn {
+	width: 100%;
+	height: 38px;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 22px;
+	text-align: center;
+	letter-spacing: -0.1px;
+	color: #FFFFFF;
+	background: $focus-color;
+	border:none;
+	border-radius: 6px;
+	margin-bottom: 22px;
+	transition: all .2s ease;
+	&:hover {
+		background:#0061c9 ;
+	}
+	&:active {
+		background: $focus-color ;
+	}
+}
+
 
 .form-block {
-	// border: 1px solid #000;
+	
 	width: 570px;
 	height: 590px;
 	background-color: #fff;
 	margin-top: 45px;
-	margin-bottom: 65px;
-	fieldset {
-		padding: 0 35px;
-		border: none;
-			legend {
-				padding: 35px 0 20px;
-				font-weight: 500;
-				font-size: 24px;
-				line-height: 32px;
-				letter-spacing: 0;
-				color: #1C1C1C;
-			}
+	padding: 0 35px;
+	padding-bottom: 65px;
+
+	.legend {
+		padding: 35px 0 20px;
+		font-weight: 500;
+		font-size: 24px;
+		line-height: 32px;
+		letter-spacing: 0;
+		color: #1C1C1C;
 	}
+
 
 	.form__row {
 		margin-bottom: 20px;
@@ -97,27 +112,8 @@ body {
 			letter-spacing: -0.1px;
 			color: #969696;
 		}
-
-		.btn{
-			width: 100%;
-			height: 38px;
-			
-			font-family: 'Roboto';
-			font-style: normal;
-			font-weight: 500;
-			font-size: 15px;
-			line-height: 22px;
-			text-align: center;
-			letter-spacing: -0.1px;
-			color: #FFFFFF;
-			background-color: #007BFF;
-		}
-
 	}
 }
-
-
-
 
 
 input[type=text],
@@ -193,8 +189,6 @@ select {
 .jq-selectbox__select:hover {
 	background: #fff;
 }
-
-
 
 .jq-selectbox.focused .jq-selectbox__select {
 	border: 1px solid $focus-color;
@@ -301,23 +295,6 @@ select {
 	color: #FFF;
 }
 
-.btn {
-	width: 100%;
-	height: 38px;
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 500;
-	font-size: 15px;
-	line-height: 22px;
-	text-align: center;
-	letter-spacing: -0.1px;
-	color: #FFFFFF;
-	background: $focus-color;
-	border:none;
-	border-radius: 6px;
-	margin-bottom: 22px;
-}
-
 .btn__subtitle {
 	width: 360px;
 	font-size: 13px;
@@ -381,7 +358,6 @@ select {
 
 	}
 
-
 	.user-foto {
 		width: 80px;
 		height: 80px;
@@ -395,6 +371,8 @@ select {
 	.btn__wrap {
 		width: 150px;
 	}
+
+
 }
 
 
